# kickoff-dot-desktop

./: Cargo.toml  README.md  default.nix  flake.nix
nix/: home-manager.nix
src/: desktop_file.rs  main.rs
