[package]
name = "kickoff-dot-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
freedesktop_entry_parser = "1.3"
lazy_static = "1.4.0"
log = "0.4.21"
thiserror = "1.0.60"
which = "6.0"
