[package]
name = "kickoff-dot-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
freedesktop_entry_parser = "1.3"
lazy_static = "1.5"
log = "0.4"
thiserror = "2.0"
which = "8.0"
